# Force-Volume-IR-processing

./: .zenodo.json  CITATION.cff  FVIR_data_cube_processing.py  FVIR_peak_processing.py  LICENSE  README.md  pyproject.toml  requirements.txt
data/: READ_ME
