[project]
name = "Force-Volume-IR-processing"
version = "0.1.0"
description = "A project to process .spm data cube from the Force-Volume AFM-IR acquisition mode."
authors = [
  { name="COLLANGE Carla", email="carla.collange@universite-paris-saclay.fr" },
readme = "README.md"
license = "MIT"
keywords = ["AFMIR", "REFS", "Resonance Enhanced Frequency Sweep", "Infrared Force Volume"]
]
requires-python = ">=3.9"
dependencies = [
  "streamlit==1.40.1",
  "matplotlib==3.8.4",
  "nanoscope==1.2.300",
  "plotly==5.24.1",
  "mpld3==0.5.10",
  "streamlit-plotly-events==0.0.6",
  "lmfit==1.3.1",
  "joblib==1.4.0",
  "pandas==2.2.2",
  "numpy==1.26.4",
  "scipy==1.13.0",
  "pywin32==305"
]